@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-06-11T01:26:18Z",
-  "count_outdated" : 3894,
-  "uniques_outdated" : 690,
+  "timestamp" : "2024-06-11T12:38:28Z",
+  "count_outdated" : 3896,
+  "uniques_outdated" : 691,
   "count" : 3958,
   "uniques" : 703,
   "views" : [
-    {
-      "timestamp": "2024-05-28T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-05-30T00:00:00Z",
       "count": 8,
