@@ -1,12 +1,7 @@
 {
-  "count": 64,
-  "uniques": 13,
+  "count": 62,
+  "uniques": 12,
   "views": [
-    {
-      "timestamp": "2024-05-28T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-05-30T00:00:00Z",
       "count": 8,
